fixed an issue on mobile where the menu wouldn't collapse properly

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -21,7 +21,7 @@ body {
 
 .menu {
   background-color: #1980c1;
-  height: 100%; }
+  max-height: 100%; }
   .menu svg {
     fill: #092b40; }
 
