--- a/src/styles/scss/menu.scss
+++ b/src/styles/scss/menu.scss
@@ -1,6 +1,6 @@
 .menu {
     background-color: #1980c1;
-    height: 100%;
+    max-height: 100%;
 
     svg {
         fill: #092b40;
